# aidocwriter

./: .gitignore  Dockerfile.api  Dockerfile.worker  LICENSE.md  README.md  codex-plan.txt  pyproject.toml
.github/workflows/: docker-build.yml  terraform.yml
docs/: mcp-contract.md  phase-5-plan.md
docs/diagrams/: agent-chain.mmd
infra/terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfstate  terraform.tfvars  variables.tf
plantuml-server/: .dockerignore  Dockerfile  README.md
samples/mcp_server/: README.md  app.py
src/api/: auth.py  deps.py  main.py  models.py  status_store.py
src/docwriter/: __init__.py  artifacts.py  cli.py  company_profile_context.py  company_profile_store.py  config.py  cycle_repository.py  diagram_renderer.py  document_index.py  feature_flags_store.py  graph.py  job_runner.py  llm.py  mcp_client.py  messaging.py  models.py  plantuml_reference.py  profile_extract.py  queue.py  rfp_extract.py  stage_utils.py  status_store.py  storage.py  summary.py  telemetry.py  workers.py
src/functions_diagram_prep/: Dockerfile  function_app.py
src/functions_diagram_render/: Dockerfile  function_app.py
tests/: test_company_profile_extract.py  test_company_profile_store.py  test_core_rfp.py  test_diagram_prep.py  test_diagram_renderer.py  test_graph.py  test_job_runner.py  test_messaging.py  test_planner.py  test_review_batching.py  test_reviewer.py  test_rfp_extract.py  test_verifier.py  test_writer.py
ui/: Dockerfile  README.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts
(+90 files in other folders)
